--- a/index.html
+++ b/index.html
@@ -9,20 +9,21 @@
 		<nav>
     		<ul>
         		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-        		<li><a href="/cv">CV</a></li>
-        		<li><a href="/blog">Blog</a></li>
+	        	<li><a href="/About">About</a></li>
+        		<li><a href="/Resume">CV</a></li>
+        		<li><a href="/Blog">Blog</a></li>
     		</ul>
 		</nav>
 		<div class="container">
     		<div class="blurb">
         		<h1>Hi there, I'm Edwin Pan!</h1>
-				<p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
+				<p>I'm a Senior studying Electrical Engineering at <em>The University of Illinois @ Urbana Champaign</em>. <a href="/about">Read more about my life...</a></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
     		<ul>
-        		<li><a href="mailto:edwin.h.pan@gmail.com">email</a></li>
+        		<li><a href="mailto:edwin.h.pan@gmail.com">Personal Email</a></li>
+        		<li><a href="mailto:epan2@illinois.edu">University Email</a></li>
         		<li><a href="https://github.com/edwin-pan">github.com/edwin-pan</a></li>
 			</ul>
 		</footer>
