--- a/index.html
+++ b/index.html
@@ -2,6 +2,13 @@
 <html>
 	<head>
 		<title>Edwin Pan</title>
+
+        <link rel="icon" href="res/uiuc_logo.png">
+
+        
+        <meta name="description" content="Edwin Pan&apos;s homepage">
+        <meta name="author" content="Edwin Pan">
+
 		<!-- link to main stylesheet -->
 		<link rel="stylesheet" type="text/css" href="/css/main.css">
 	</head>
@@ -19,12 +26,23 @@
         		<h1>Hi there, I'm Edwin Pan!</h1>
 				<p>I'm a Senior studying Electrical Engineering at <em>The University of Illinois @ Urbana Champaign</em>. <a href="/about">Read more about my life...</a></p>
     		</div><!-- /.blurb -->
+
+            <aside id="side_info">
+                <img src="res/Edwin_Portrait.jpg" alt="" style="width:100%;height:100%;"/>
+                <p style="font-size:150%; font-weight:bold; margin:0;">Edwin Pan</p>
+                <p style="font-size:100%; margin:0;">Senior, Electrical Engineering</p>
+                <a style="font-size:80%;" href="http://www.ece.illinois.edu/">Department of Electrical and Computer Engineering</a><br>
+                <a style="font-size:80%;" href="http://csl.illinois.edu/">Coordinated Science Laboratory</a><br>
+                <a style="font-size:80%;" href="http://www.illinois.edu/">University of Illinois at Urbana-Champaign</a><br>
+                <!--<p style="font-size:80%;"><i class="fa fa-globe"></i> Insert Address </p> -->
+                <p style="font-size:80%;"><i class="fa fa-github"></i> <a href="https://github.com/edwin-pan">github.com/edwin-pan</a></p>
+            </aside>
+
 		</div><!-- /.container -->
 		<footer>
     		<ul>
         		<li><a href="mailto:edwin.h.pan@gmail.com">Personal Email</a></li>
         		<li><a href="mailto:epan2@illinois.edu">University Email</a></li>
-        		<li><a href="https://github.com/edwin-pan">github.com/edwin-pan</a></li>
 			</ul>
 		</footer>
 	</body>
