--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <meta name="author" content="Edwin Pan">
 
 		<!-- link to main stylesheet -->
-		<link rel="stylesheet" type="text/css" href="/css/main.css">
+		{% comment %} <link rel="stylesheet" type="text/css" href="/css/main.css"> {% endcomment %}
 	</head>
 	<body>
 		<nav>
