--- a/index.html
+++ b/index.html
@@ -1,8 +1,151 @@
----
-layout: default
-title: Hank Quinlan, Horrible Cop
----
-<div class="blurb">
-	<h1>Hi there, I'm Hank Quinlan!</h1>
-	<p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
-</div><!-- /.blurb -->
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <title>Chris Piech</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="">
+    <meta name="author" content="">
+
+    <!-- Le styles -->
+    <link href="plugins/bootstrap-3.3.6/css/bootstrap.min.css" rel="stylesheet">
+    <link href="style.css" rel="stylesheet">
+
+    <!-- Le scripts -->
+    <script src="plugins/jquery.min.js"></script>
+  </head>
+
+  <body>
+
+<div id="fullBody">
+
+	<!-- this is going to contain the entire page -->
+
+    <div class="container" id="inner">
+      <!--  header -->
+      <div class="row mt-5">
+      	<div class="col-xs-6 col-sm-3">
+          <a class="thumbnail profilePicture"> <img src="images/people/chrisP.jpg"> </a>
+      	</div>
+        <div class="col-xs-12 col-sm-9">
+          <h1>Chris Piech</h1>
+          <p>
+            <hr/>
+          </p>
+          <p>
+            Assistant Professor of <a href="http://cs.stanford.edu">Computer Science</a> Education, Stanford University. <br/>
+            PhD advised by <a href = "http://geometry.stanford.edu/member/guibas/">Leo Guibas</a> and <a href = "http://robotics.stanford.edu/users/sahami/bio.html">Mehran Sahami</a>.
+          </p>
+
+          <p>
+            <span class="sidebaricon glyphicon glyphicon-home" aria-hidden="true"/></span>  Office: Gates Building, Room 202 <br/>
+            <span class="sidebaricon glyphicon glyphicon-envelope" aria-hidden="true"/></span> Email: piech <i>at</i> cs.stanford.edu <br/>
+            <span class="sidebaricon glyphicon glyphicon-time" aria-hidden="true"/></span> Office Hours: Thursdays 1:30-3:00p (starting Jan 16th)
+          </p>
+        </div>
+        <div class="col-xs-12" style="margin-top:20px">
+          <p>
+            <em>I was born and grew up in Nairobi, Kenya.
+            When I was twelve I moved to Kuala Lumpur, Malaysia where I lived until I came to Stanford for university, liked it a lot and stayed.
+            I love teaching and I'm into exploring our world (through both science and travelling). My research is in machine learning to understand human learning.</em>
+          </p>
+
+          <!--<div class="well">-->
+            <div style="margin-bottom:5px"><b>News</b> (June, 2019):</div>
+            <div style="margin-bottom:5px"><b class="newsTitle">AI Visual Acuity Test</b>: We have a new AI based algorithm for precisely measuring vision: <a href="https://myeyes.ai/">https://myeyes.ai/</a> [<a href="https://arxiv.org/pdf/1906.01811.pdf">paper</a>].</div>
+            <div style="margin-bottom:5px"><b class="newsTitle">Generative Grading</b>: Curious how you can get human level accuracy when grading open ended assignments? Generative Grading [<a href="https://arxiv.org/pdf/1905.09916.pdf">paper</a>].</div>
+            <div style="margin-bottom:5px"><b class="newsTitle">Congratulations Lisa!!</b>: <a href="http://stanford.edu/~yanlisa/">Lisa Yan</a> is the first student to graduate from the group. She starts teaching at Stanford in the fall!</div>
+            <b class="newsTitle">New Course</b>: I am teaching a brand new course called <a href="https://chrispiech.github.io/cs398-fall-19/">CS398: Computational Education</a>. Coming this fall to Stanford.
+
+          <!--</div>-->
+          <hr/>
+        </div>
+      </div>
+
+      <!-- classes -->
+
+<div class="row">
+  <div class="col-xs-12">
+
+    <h2 class="bioLead">
+      Teaching at Stanford
+    </h2>
+  </div>
+  <div class="col-xs-6 col-sm-3 col-md-3">
+    <div class="course well">
+      <h4>CS106A</h4>
+      <p>
+        <a href="http://web.stanford.edu/class/archive/cs/cs106a/cs106a.1186/">Programming Methodologies</a>
+      </p>
+      <p class="subtleHeading no-margin">Current</p>
+    </div>
+  </div>
+  <div class="col-xs-6 col-sm-3 col-md-3">
+    <div class="well course">
+      <h4>CS106B</h4>
+      <p>
+        <a href="http://web.stanford.edu/class/archive/cs/cs106b/cs106b.1172/">Programming<br/> Abstractions</a>
+      </p>
+      <p class="subtleHeading no-margin">Last: Fall 2016</p>
+    </div>
+  </div>
+  <div class="col-xs-6 col-sm-3 col-md-3">
+    <div class="well course">
+      <h4>CS109</h4>
+      <p>
+        <a href="http://web.stanford.edu/class/archive/cs/cs109/cs109.1192/">Probability for Computer Scientists</a>
+      </p>
+      <p class="subtleHeading no-margin">Last: Fall 2018</p>
+    </div>
+  </div>
+  
+  <div class="col-xs-6 col-sm-3 col-md-3">
+    <div class="well course">
+      <h4>CS221</h4>
+      <p>
+        <a href="http://www.stanford.edu/class/cs221/">Intro to Artificial Intelligence</a>
+      </p>
+      <p class="subtleHeading no-margin">Last: Sum 2013</p>
+    </div>
+  </div>  
+    
+
+</div>
+
+
+<div class="row">
+  <div class="col-xs-12">
+    <hr/>
+  </div>
+</div>
+
+
+      <!-- Gotta have that footer! -->
+<div class="row">
+	<div class="col-md-12">
+
+		<div class="footer">
+			<p class="pull-left">
+				&copy; Created by Chris Piech. Updated in 2019 (hopefully it isn't something like 2020 when you are reading this).
+			</p>
+		</div>
+	</div>
+</div>
+
+<!-- <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-74362126-1', 'auto');
+  ga('send', 'pageview');
+
+</script> -->
+
+   
+    <!-- end container -->
+    </div>
+    </div>
+  </body>
+</html>
