--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="author" content="">
 
     <!-- Le styles -->
-    <link href="plugins/bootstrap-3.3.6/css/bootstrap.min.css" rel="stylesheet">
+    <link href="plugins/bootstrap-4.5.0-dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="style.css" rel="stylesheet">
 
     <!-- Le scripts -->
