--- a/index.html
+++ b/index.html
@@ -2,16 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Chris Piech</title>
+    <title>Edwin Pan</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="Edwin Pan's Personal Page">
+    <meta name="author" content="Edwin Pan">
 
-    <!-- Le styles -->
+    <!-- styles -->
     <link href="plugins/bootstrap-4.5.0-dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="style.css" rel="stylesheet">
 
-    <!-- Le scripts -->
+    <!-- scripts -->
     <script src="plugins/jquery.min.js"></script>
   </head>
 
@@ -25,7 +25,7 @@
       <!--  header -->
       <div class="row mt-5">
       	<div class="col-xs-6 col-sm-3">
-          <a class="thumbnail profilePicture"> <img src="images/people/chrisP.jpg"> </a>
+          <a class="thumbnail profilePicture"> <img src="images/profile_square.jpg"> </a>
       	</div>
         <div class="col-xs-12 col-sm-9">
           <h1>Chris Piech</h1>
