more content update in about

--- a/index.html
+++ b/index.html
@@ -72,9 +72,9 @@
                 <name>Edwin Pan</name>
               </p>
 
-              <p> I am a first year Master's student studying Electrical Engineering at Stanford University (focus TBD).</p>
+              <p> I am a first year Master's student studying Electrical Engineering at <a href="https://ee.stanford.edu/">Stanford University</a> with a focus on sensor signal processing (radar, camera, lidar, etc).</p>
 
-              <p>I did my Bachelor's degree in Electrical Engineering with Highest Honors at The University of Illinois @ Urbana-Champaign <a href="https://ece.illinois.edu/">ECE Department</a>. I led a start-up company known as PreSense through acquisition through the <a href="https://ece.illinois.edu/alchemy/">Alchemy Deep Tech Incubator Program</a>, with advising from Professor Sanjay Patel, Professor Wen-mei Hwu, and Jinjun Xiong.
+              <p>I did my Bachelor's degree in Electrical Engineering with Highest Honors at <a href="https://ece.illinois.edu/">The University of Illinois @ Urbana-Champaign</a>. I led a start-up company known as <a href="https://www.presenseradar.com/">PreSense</a> through acquisition as part of the <a href="https://ece.illinois.edu/alchemy/">Alchemy Deep Tech Incubator Program</a>, with advising from Professor Sanjay Patel, Professor Wen-mei Hwu, and Jinjun Xiong.
               </p>
               
               <p style="text-align:center">
