adding cv, and content

--- a/index.html
+++ b/index.html
@@ -79,11 +79,11 @@
               
               <p style="text-align:center">
                 <a href="mailto:edwinpan@stanford.edu">Email</a> &nbsp/&nbsp
-                <a href="data/JonBarron-CV.pdf">CV</a> &nbsp/&nbsp
-                <a href="data/JonBarron-bio.txt">Biography</a> &nbsp/&nbsp
-                <a href="https://scholar.google.com/citations?hl=en&user=jktWnL8AAAAJ">Google Scholar</a> &nbsp/&nbsp
-                <a href="https://www.facebook.com/barron.jon">Facebook</a> &nbsp/&nbsp
-                <a href="https://twitter.com/jon_barron">Twitter</a>
+                <a href="data/Edwin_Pan_CV_7_1_2020.pdf">CV</a> &nbsp/&nbsp
+                <a href="www.linkedin.com/in/edwinhpan">Linkedin</a> &nbsp/&nbsp
+                <a href="https://github.com/edwin-pan">Github</a> &nbsp/&nbsp
+                <a href="https://www.facebook.com/edwin.h.pan/">Facebook</a> &nbsp/&nbsp
+                <a href="https://www.instagram.com/_edwinpan/">Instagram</a>
               </p>
             </td>
             <td style="padding:2.5%;width:40%;max-width:40%">
