--- a/index.html
+++ b/index.html
@@ -1667,6 +1667,19 @@
       </td>
     </tr>
   </table>
+
+        <!-- Gotta have that footer! -->
+<div class="row">
+	<div class="col-md-12">
+
+		<div class="footer">
+			<p class="pull-left">
+				&copy; Created by Edwin Pan. Updated in 2020.
+			</p>
+		</div>
+	</div>
+</div>
+
 </body>
 
 </html>
