--- a/index.html
+++ b/index.html
@@ -1673,8 +1673,8 @@
 	<div class="col-md-12">
 
 		<div class="footer">
-			<p class="pull-left">
-				&copy; Created by Edwin Pan. Updated in 2020.
+			<p class="pull-center">
+				Updated July 1st, 2020. <a href="https://jonbarron.info/">Template Credit</a>
 			</p>
 		</div>
 	</div>
