fixing logo size

--- a/index.html
+++ b/index.html
@@ -310,9 +310,9 @@
 
         <tr>
             <td><img src="images/Uhnder_small.png" class="scalable"/></td>
-            <td><img src="images/PreSense.png" class="scalable"/></td>
-            <td><img src="images/Uhnder.png" class="scalable"/></td>
-            <td><img src="images/Uhnder.png" class="scalable"/></td>
+            <td><img src="images/PreSense_250.png" class="scalable"/></td>
+            <td><img src="images/Uhnder_250.png" class="scalable"/></td>
+            <td><img src="images/Uhnder_250.png" class="scalable"/></td>
             <td><img src="images/blank.png" class="scalable" /></td>
             <td><img src="images/blank.png" class="scalable"/></td>
 
@@ -341,9 +341,9 @@
             <p align=right>
               <a href="https://jonbarron.info/"> Template </a>
               <a class="pull-right" href="#">
-                <script type="text/javascript" id="clustrmaps"
+                <!-- <script type="text/javascript" id="clustrmaps"
                   src="//cdn.clustrmaps.com/map_v2.js?d=TUgFrtOmtKYxWSVaYTURO0MNpu5rDq6I6q5sgBQjByU&cl=ffffff&w=a">
-                </script>
+                </script> -->
               </a>
             </p>
           </div>
