--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 						</article>
 
 						<article class="col-6 col-12-xsmall work-item">
-							<a href="images/fulls/openradar_thumb2.PNG" class="image fit thumb"><img src="images/thumbs/openradar_thumb2.PNG" alt="" /></a>
+							<a href="images/fulls/openradar_thumb2.PNG" class="image fit thumb"><img src="images/thumbs/openradar_thumb2.png" alt="" /></a>
 							<h3>OpenRadar: A Toolkit for Prototyping mmWave Radar Applications</h3>
 
 							<p>
