--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 			<header id="header">
 				<div class="inner">
 					<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
-					<h1><strong>Edwin Pan</strong>,<br />
+					<h1><strong>Edwin Pan</strong><br />
 					Teaching machines<br />
 					to understand what they see.</h1>
 				</div>
@@ -33,7 +33,7 @@
 						<header class="major">
 							<h2>Introduction</h2>
 						</header>
-						<p>I am a first year Master's student studying Electrical Engineering at <a href="https://stanford.edu/">Stanford University</a> within the Information Systems and Science track. My primary research interests are indisciplinary, intersecting computer vision, machine learning, and image processing for various applications.</p>
+						<p>I am a first year Master's student studying Electrical Engineering at <a href="https://stanford.edu/">Stanford University</a> within the Information Systems and Science track. My primary research interests are indisciplinary, intersecting computer vision, machine learning, and image processing for applications in both medical imaging and autonomous vehicles.</p>
 						<p>I received my Bachelor's degree in Electrical Engineering with Highest Honors from <a href="https://ece.illinois.edu/">The University of Illinois at Urbana-Champaign</a> in 2020, along with a minor in Computer Science focused on AI. I led a start-up company known as <a href="https://www.presenseradar.com/">PreSense</a> through acquisition as part of the <a href="https://ece.illinois.edu/alchemy/">Alchemy Deep Tech Incubator Program</a>, with advising from Professor Sanjay Patel, Professor Wen-mei Hwu, and Jinjun Xiong.</p>
 						<!-- <ul class="actions">
 							<li><a href="#" class="button">Learn More</a></li>
@@ -108,7 +108,7 @@
 						<article class="col-6 col-12-xsmall work-item">
 							<a href="images/fulls/mlsp_thumb.png" class="image fit thumb"><img src="images/thumbs/mils_thumb.png" alt="" /></a>
 							<h3>Automotive mmWave FMCW Radar-based Micro-Doppler Signature Feature Extraction and Classification</h3>
-							<em>@UIUC CS598PS: Machine Learning in Signal Processing</em>
+							<em>@UIUC CS598PS: ML in Signal Processing</em>
 							<p>Applied CNN architecture to a micro-doppler spectrogram data set simulated through Matlab in an attempt to distinguish between a pedestrian radar motion spectrogram and a bicycle radar motion spectrogram.</p>
 						</article>
 						<article class="col-6 col-12-xsmall work-item">
