--- a/index.html
+++ b/index.html
@@ -33,8 +33,10 @@
 						<header class="major">
 							<h2>Introduction</h2>
 						</header>
-						<p>I am a first year Master's student studying Electrical Engineering at <a href="https://stanford.edu/">Stanford University</a> within the Information Systems and Science track. My primary research interests are indisciplinary, intersecting computer vision, machine learning, and image processing for applications in both medical imaging and autonomous vehicles.</p>
-						<p>I received my Bachelor's degree in Electrical Engineering with Highest Honors from <a href="https://ece.illinois.edu/">The University of Illinois at Urbana-Champaign</a> in 2020, along with a minor in Computer Science focused on AI. I led a start-up company known as <a href="https://www.presenseradar.com/">PreSense</a> through acquisition as part of the <a href="https://ece.illinois.edu/alchemy/">Alchemy Deep Tech Incubator Program</a>, with advising from Professor Sanjay Patel, Professor Wen-mei Hwu, and Jinjun Xiong.</p>
+						<p>I am a Master's student in Electrical Engineering at <a href="https://stanford.edu/">Stanford University</a>. I am working with <a href="http://stanford.edu/~eadeli/">Ehsan Adeli</a> in both the <a href="http://cnslab.stanford.edu"> Computational Neuroscience (CNS)</a> Lab and the <a href="http://svl.stanford.edu"> Stanford Vision and Learning (SVL)</a> Lab's Video Group. </p>
+						<p>I received my Bachelor's degree in Electrical Engineering with Highest Honors from <a href="https://ece.illinois.edu/">The University of Illinois at Urbana-Champaign</a> in 2020, along with a minor in Computer Science focused on artificial intelligence. I led a start-up company known as <a href="https://github.com/PreSenseRadar/OpenRadar">PreSense</a> through acquisition as part of the <a href="https://ece.illinois.edu/alchemy/">Alchemy Deep Tech Incubator Program</a>, with advising from Professor Sanjay Patel, Professor Wen-mei Hwu, and Jinjun Xiong.</p>
+						<p>My primary research interests are indisciplinary, intersecting computer vision, machine learning, and image processing for applications in both medical imaging and autonomous vehicles. </p>
+
 						<!-- <ul class="actions">
 							<li><a href="#" class="button">Learn More</a></li>
 						</ul> -->
