--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
 						<header class="major">
 							<h2>Introduction</h2>
 						</header>
-						<p>I am a Master's student in Electrical Engineering at <a href="https://stanford.edu/">Stanford University</a>. I am working with <a href="http://stanford.edu/~eadeli/">Ehsan Adeli</a> in both the <a href="http://cnslab.stanford.edu"> Computational Neuroscience (CNS)</a> Lab and the <a href="http://svl.stanford.edu"> Stanford Vision and Learning (SVL)</a> Lab's Video Group. </p>
-						<p>I received my Bachelor's degree in Electrical Engineering with Highest Honors from <a href="https://ece.illinois.edu/">The University of Illinois at Urbana-Champaign</a> in 2020, along with a minor in Computer Science focused on artificial intelligence. I led a start-up company known as <a href="https://github.com/PreSenseRadar/OpenRadar">PreSense</a> through acquisition as part of the <a href="https://ece.illinois.edu/alchemy/">Alchemy Deep Tech Incubator Program</a>, with advising from Professor Sanjay Patel, Professor Wen-mei Hwu, and Jinjun Xiong.</p>
+						<p>I am a Master's student in Electrical Engineering at <a href="https://stanford.edu/">Stanford University</a>. I am working with <a href="http://stanford.edu/~eadeli/">Dr. Ehsan Adeli</a> in both the <a href="http://cnslab.stanford.edu"> Computational Neuroscience (CNS)</a> Lab and the <a href="http://svl.stanford.edu"> Stanford Vision and Learning (SVL)</a> Lab's Video Group. </p>
+						<p>I received my Bachelor's degree in Electrical Engineering with Highest Honors from <a href="https://ece.illinois.edu/">The University of Illinois at Urbana-Champaign</a> in 2020, along with a minor in Computer Science focused on artificial intelligence. I led a start-up company known as <a href="https://github.com/PreSenseRadar/OpenRadar">PreSense</a> through acquisition as part of the <a href="https://ece.illinois.edu/alchemy/">Alchemy Deep Tech Incubator Program</a>, with advising from Professor <a href="https://ece.illinois.edu/about/directory/faculty/sjp">Sanjay Patel</a>, Professor <a href="https://ece.illinois.edu/about/directory/faculty/w-hwu">Wen-mei Hwu</a>, and Jinjun Xiong.</p>
 						<p>My primary research interests are indisciplinary, intersecting computer vision, machine learning, and image processing for applications in both medical imaging and autonomous vehicles. </p>
 
 						<!-- <ul class="actions">
@@ -81,7 +81,6 @@
 							<p><em>arXiv</em>, December 2019 </p>
 
 							<p>
-							<a href="https://people.eecs.berkeley.edu/~bmild/fourfeat/">project page</a> /
 							<a href="https://arxiv.org/abs/1912.12395">arXiv</a> /
 							<a href="https://github.com/PreSenseRadar/OpenRadar">code</a>
 							</p>
@@ -99,6 +98,14 @@
 					<h2>Projects</h2>
 					<div class="row">
 						<article class="col-6 col-12-xsmall work-item">
+							<a href="https://cs330.stanford.edu/projects2020/CS330_Edwin_Pan_Pankaj_Rajak_Shubham_Shrivastava.pdf" class="image fit thumb"><img src="images/thumbs/Metareg_block_diagram_thumb.png" alt="" /></a>
+							<h3>Meta-Regularization by Enforcing Mutual-Exclusiveness</h3>
+							<em>@Stanford CS330: Deep Multi-Task and Meta Learning</em>
+
+							<p>Leveraging the meta learning paradigm opens the door for a new type of meta-overfitting known as 'memorization'. Unfortunately, clever task-construction must be proposed on a case-by-case, scenario-by-scenario basis.
+								In this project, we propose a method of meta-regularization called Mutual-Exclusiveness Regularization (MER). MER provides a means of controlling the flow of inforamation during trainied thus inducing task mutual-exclusivity in the absence of such structure. </p>
+						</article>
+						<article class="col-6 col-12-xsmall work-item">
 							<a href="images/fulls/cv_thumb.png" class="image fit thumb"><img src="images/thumbs/cv_thumb.png" alt="" /></a>
 							<h3>Generating Segmentation Masks for Autonomous Vehicle
 								Application via Style Transfer Framework with Weakened Supervision</h3>
@@ -110,7 +117,7 @@
 						<article class="col-6 col-12-xsmall work-item">
 							<a href="images/fulls/mlsp_thumb.png" class="image fit thumb"><img src="images/thumbs/mils_thumb.png" alt="" /></a>
 							<h3>Automotive mmWave FMCW Radar-based Micro-Doppler Signature Feature Extraction and Classification</h3>
-							<em>@UIUC CS598PS: ML in Signal Processing</em>
+							<em>@UIUC CS598PS: Machine Learning in Signal Processing</em>
 							<p>Applied CNN architecture to a micro-doppler spectrogram data set simulated through Matlab in an attempt to distinguish between a pedestrian radar motion spectrogram and a bicycle radar motion spectrogram.</p>
 						</article>
 						<article class="col-6 col-12-xsmall work-item">
