updated for winter, 2021

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 					<h2>Research</h2>
 					<div class="row">
 						<article class="col-6 col-12-xsmall work-item">
-							<a href="images/fulls/thesis_thumb.png" class="image fit thumb"><img src="images/thumbs/thesis_thumb.png" alt="" /></a>
+							<a href="" class="image fit thumb"><img src="images/thumbs/thesis_thumb.png" alt="" /></a>
 							<h3>Object Classification Using Range-Doppler Plots from a High Density PMCW MIMO mmWave Radar</h3>						
 							<p><strong>Edwin Pan</strong></p>
 							
@@ -66,7 +66,7 @@
 						</article>
 
 						<article class="col-6 col-12-xsmall work-item">
-							<a href="images/fulls/openradar_thumb2.PNG" class="image fit thumb"><img src="images/thumbs/openradar_thumb2.png" alt="" /></a>
+							<a href="" class="image fit thumb"><img src="images/thumbs/openradar_thumb3.png" alt="" /></a>
 							<h3>OpenRadar: A Toolkit for Prototyping mmWave Radar Applications</h3>
 
 							<p>
@@ -93,6 +93,32 @@
 					</ul> -->
 				</section>
 
+				<!-- Experience -->
+				<section id="exp">
+					<h2>Experience</h2>
+					<div class="col-6 col-12-xsmall">
+						<p><span class="image left"><img src="images/logos/waymo_square.png" alt="" /></span> <header><h3>Waymo/X (Formerly, Google Self-Driving Project)</h3>
+							<p> Intern, Perception Team -- Summer 2021 <br /> Mountain View, California</p> </header> Later this year, I will be working on autonomous driving perception at <a href="https://waymo.com">Waymo</a>. <!-- WRITE YOUR TEXT HERE --><br> <br> </p>
+						</div>
+					<div class="col-6 col-12-xsmall">
+						<p><span class="image left"><img src="images/logos/uhnder_square.png" alt="" /></span> <header><h3>Uhnder Inc.</h3>
+							<p> Intern, Systems Engineering -- Summer 2020/2018/2017 <br /> Austin, Texas</p> </header> Produced a Bayesian approach to occupancy grid mapping for an autonomous robot system. The <a href="https://uhnder.com">Uhnder</a> digital radar provides rich 4D information. <!-- WRITE YOUR TEXT HERE --> <br> </p>
+						</div>
+					</section>
+
+				<!-- Education -->
+				<section id="edu">
+					<h2>Education</h2>
+					<div class="col-6 col-12-xsmall">
+						<p><span class="image left"><img src="images/logos/stanford_square.png" alt="" /></span> <header><h3>Stanford University</h3>
+							<p> Master of Science <br /> Department of Electrical Engineering</p> </header>  <!-- WRITE YOUR TEXT HERE --><br> <br> </p>
+						</div>
+					<div class="col-6 col-12-xsmall">
+						<p><span class="image left"><img src="images/logos/illinois_square.png" alt="" /></span> <header><h3>University of Illinois at Urbana-Champaign</h3>
+							<p> Bachelor of Science <br /> Department of Electrical and Computer Engineering</p> </header>  <!-- WRITE YOUR TEXT HERE --> <br> </p>
+						</div>
+					</section>
+
 				<!-- Projects -->
 				<section id="two">
 					<h2>Projects</h2>
@@ -102,8 +128,8 @@
 							<h3>Meta-Regularization by Enforcing Mutual-Exclusiveness</h3>
 							<em>@Stanford CS330: Deep Multi-Task and Meta Learning</em>
 
-							<p>Leveraging the meta learning paradigm opens the door for a new type of meta-overfitting known as 'memorization'. Unfortunately, clever task-construction must be proposed on a case-by-case, scenario-by-scenario basis.
-								In this project, we propose a method of meta-regularization called Mutual-Exclusiveness Regularization (MER). MER provides a means of controlling the flow of inforamation during trainied thus inducing task mutual-exclusivity in the absence of such structure. </p>
+							<p>Leveraging the meta learning paradigm offers incredible model generalizability. However, it also opens the door for a new type of meta-overfitting known as 'memorization'. Unfortunately, clever task-construction must be detailed on a case-by-case basis.
+								In this project, we propose a meta-regularization technique called Mutual-Exclusiveness Regularization (MER). MER controls the flow of information during training, thus inducing task mutual-exclusivity. </p>
 						</article>
 						<article class="col-6 col-12-xsmall work-item">
 							<a href="images/fulls/cv_thumb.png" class="image fit thumb"><img src="images/thumbs/cv_thumb.png" alt="" /></a>
@@ -115,16 +141,16 @@
 								Specifically, CycleGAN and pix2pix are benchmarked against a more traditional U-Net architecture built off of Resnet-18. The project uses a subset of the image data from the ApolloScape open dataset.</p>
 						</article>
 						<article class="col-6 col-12-xsmall work-item">
-							<a href="images/fulls/mlsp_thumb.png" class="image fit thumb"><img src="images/thumbs/mils_thumb.png" alt="" /></a>
+							<a href="images/fulls/mlsp_thumb.png" class="image fit thumb"><img src="images/thumbs/mlsp_thumb.png" alt="" /></a>
 							<h3>Automotive mmWave FMCW Radar-based Micro-Doppler Signature Feature Extraction and Classification</h3>
 							<em>@UIUC CS598PS: Machine Learning in Signal Processing</em>
 							<p>Applied CNN architecture to a micro-doppler spectrogram data set simulated through Matlab in an attempt to distinguish between a pedestrian radar motion spectrogram and a bicycle radar motion spectrogram.</p>
 						</article>
 						<article class="col-6 col-12-xsmall work-item">
-							<a href="images/fulls/03.jpg" class="image fit thumb"><img src="images/thumbs/03.jpg" alt="" /></a>
+							<a href="" class="image fit thumb"><img src="images/thumbs/03.jpg" alt="" /></a>
 							<h3>Image and Video Processing Final Project</h3>
 							<em>@UIUC ECE418: Image and Video Processing </em>
-							<p>TBD.</p>
+							<p>Analysis of existing approaches to halftoning (i.e. naive quantization, Floyd-Steinberg Error Diffusion).</p>
 						</article>
 						<!-- <article class="col-6 col-12-xsmall work-item">
 							<a href="images/fulls/04.jpg" class="image fit thumb"><img src="images/thumbs/04.jpg" alt="" /></a>
@@ -148,12 +174,30 @@
 				</section>
 
 
-				<!-- Two
-					<section id="two">
+					<section>
+						<!-- <blockquote> Were it so easy.</blockquote> -->
+						<!-- <h5>Preformatted</h5>
+						<pre><code>i = 0;
+
+						while (!deck.isInOrder()) {
+						print 'Iteration ' + i;
+						deck.shuffle();
+						i++;
+						}
+
+						print 'It took ' + i + ' iterations to sort the deck.';</code></pre> -->
+					</section>
+
+
+				<!-- Actual Stuff above this line-->
+
+
+				<!-- Two -->
+					<!-- <section id="two">
 						<h2>Recent Work</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/01.jpg" class="image fit thumb"><img src="images/thumbs/01.jpg" alt="" /></a>
+								<a href="https://waymo.com" class="image fit"><img src="images/logos/waymo.png" alt="" /></a>
 								<h3>Magna sed consequat tempus</h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 							</article>
@@ -226,9 +270,9 @@
 						</div>
 					</section> -->
 
-				<!-- Four
+				<!-- Four -->
 				
-					<section id="four">
+					<!-- <section id="four">
 						<h2>Elements</h2>
 
 						<section>
